adding a new code by knowing how xgboost algorithm works

--- a/02practice/02practice.ipynb
+++ b/02practice/02practice.ipynb
@@ -2,26 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d497d00f",
+   "execution_count": 14,
+   "id": "4a8dc613",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"hello\")"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn import svm\n",
+    "import matplotlib.pyplot as plt\n",
+    "import streamlit as st\n",
+    "import joblib as jlb\n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "568d9609",
+   "id": "0d536b46",
    "metadata": {},
    "outputs": [],
    "source": []
